render images in a different way

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
     </head>
     <body>
         <div class="carousel-wrapper">
-            <div class="image-container">
-                <img src="" alt="" id="image-player" />
-            </div>
+            <div class="image-container"></div>
             <div class="btn-container">
                 <div class="prev-btn btn btn-dark">Prev</div>
                 <div class="next-btn btn btn-dark">Next</div>
