dynamic carousel with direction of view, dot under image not have event listener

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="image-container"></div>
             <div class="btn-container">
                 <div class="prev-btn btn btn-dark">Prev</div>
+                <div class="dot-container"></div>
                 <div class="next-btn btn btn-dark">Next</div>
             </div>
         </div>
